# plants-n-pests

./: .dockerignore  .gitignore  .ignore  Cargo.toml  Dockerfile  README.md  docker-build.sh  docker-run.sh  example.env  package-lock.json  package.json  todo.md
.github/workflows/: node.yml  rust.yml
client/: main.rs  shared.rs
client/plugins/: draft_plugin.rs  endgame_plugin.rs  game_plugin.rs  hello_plugin.rs  menu_plugin.rs  mod.rs  network_plugin.rs  splash_plugin.rs  state_handler_plugin.rs
manual-test/: card-library.sh  draft.sh  login.sh  play.sh
public/: index.html  plantsandpests.js  plantsnpests.d.ts  plantsnpests.js  plantsnpests_bg.wasm.d.ts
src/: card-library.ts  config.ts  game.ts  hello.ts  index.ts  model.ts  random.ts  zod-helper.ts
test/: config.test.ts  hello.test.ts  index.test.ts  random.test.ts
