[package]
name = "plants-n-pests"
version = "0.1.0"
edition = "2021"
description = "A planty game"
repository = "https://github.com/plant-based-games/plants-n-pests"
publish = false

[[bin]]
name = "client"
path = "client/main.rs"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
reqwest = { version="0.11.18", features=['blocking', 'cookies'] }
wasm-bindgen = "0.2.87"
js-sys = "0.3.64"
wasm-bindgen-futures = "0.4.37"

[dependencies.web-sys]
version = "0.3.64"
features = [
    'Headers',
    'Client',
    'Request',
    'RequestInit',
    'RequestMode',
    'Response',
    'Window',
]

[dependencies.bevy]
version = "0.11.0"
# Disable the default features if there are any that you do not want
default-features = false
features = [
    # These are the default features:
    # (re-enable whichever you like)

    # Bevy functionality:
    "bevy_asset",         # Assets management
    "bevy_scene",         # Scenes management
    "bevy_gilrs",         # Gamepad input support
    "bevy_audio",         # Builtin audio
    "bevy_winit",         # Window management
    "animation",          # Animation support
    "x11",                # Linux: Support X11 windowing system
    "filesystem_watcher", # Asset hot-reloading

    ## "render" actually just includes:
    ## (feel free to use just a subset of these, instead of "render")
    "bevy_render",        # Rendering framework core
    "bevy_core_pipeline", # Common rendering abstractions
    "bevy_sprite",        # 2D (sprites) rendering
    "bevy_pbr",           # 3D (physically-based) rendering
    "bevy_gltf",          # GLTF 3D assets format support
    "bevy_text",          # Text/font rendering
    "bevy_ui",            # UI toolkit

    # File formats:
    "png",
    #"hdr",
    #"vorbis",

    # These are other features that may be of interest:
    # (add any of these that you need)

    # Bevy functionality:
    "wayland",              # Linux: Support Wayland windowing system
    "subpixel_glyph_atlas", # Subpixel antialiasing for text/fonts
    "serialize",            # Support for `serde` Serialize/Deserialize
    #"bevy_dynamic_plugin",   # Support for loading of `DynamicPlugin`s

    # File formats:
    #"ktx2", # preferred format for GPU textures
    #"dds",
    #"jpeg",
    #"bmp",
    #"tga",
    #"basis-universal",
    #"zstd", # needed if using zstd in KTX2 files
    #"flac",
    #"mp3",
    #"wav",

    # Development/Debug features:
    #"dynamic",      # Dynamic linking for faster compile-times
    #"trace",        # Enable tracing for performance measurement
    #"trace_tracy",  # Tracing using `tracy`
    #"trace_chrome", # Tracing using the Chrome format
    #"wgpu_trace",   # WGPU/rendering tracing
]
